<resources>
    <string name="app_name">orderbook</string>
    <string name="orderNoHint"><font size="16sp">Order no</font></string>
    <string name="spaceBetweenDate">/</string>
    <string name="username">Me</string>
    <string name="allusers">All</string>
    <string name="workCompleteText">Work Complete ? </string>
    <string name="backButtonText">Back</string>
    <string name="handWork">Hand Work</string>
    <string name="completed">Completed</string>
    <string name="addorder">Add %1$s </string>
    <string name="no">X</string>
    <string name="orderDate">ORDER DATE</string>
    <string name="delDate">DELIVERY DATE</string>
    <string name="pick">PICK</string>
    <string name="isHandWork">Hand Work?</string>
    <string name="slash">/</string>
    <string name="addText">Add</string>
    <string name="itemNotFound">Item Not Found</string>
    <string name="items">Items</string>
    <string name="name">Enter Your First Name</string>
    <string name="tapSingnInButton">and tap sign in.</string>
    <string name="hiDesigner">Hi Designer</string>
    <string name="Outof">Out Of</string>
    <string name="remainItems">+%1$s items</string>
    <string name="itemCount">%1$s items</string>
    <string name="orderDateOnDetails">Order date %1$s</string>
    <string name="deliveryDateOnDetails">Delivery date %1$s</string>
    <string name="orderTakenBy">Designed by %1$s</string>
    <string name="tabBelow">%1$s out of %2$s completed</string>
    <string name="numValue">%1$d</string>
    <string name="noOrderMsg">There\'s no orders on selected Date Tap  + Button to add new Have a nice day :)</string>
    <string name="last_entry_label">Use last entry</string>
    <string name="joly_label">Joly</string>
    <string name="tajammul_label">Tajammul</string>
    <string name="althaf_label">Althaf</string>
    <string name="malavika_label">Malavika</string>
    <string name="reshma_label">Reshma</string>
    <string name="sheena_label">Sheena</string>
    <string name="unni_label">Unni</string>
    <string name="edit_label">Edit</string>

</resources>
