<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/backgroundColor"
    android:padding="0dp">
<RelativeLayout
    android:id="@+id/workCompleteLayout"
    android:padding="0dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/backButtonColor"
    android:visibility="gone"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="13dp"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="13dp"
        android:text="@string/completed"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:layout_alignParentEnd="true"

/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="17.8dp"
        android:layout_marginTop="19dp"
        android:layout_marginBottom="19.5dp"
        android:padding="3dp"
        android:src="@drawable/tickmark"
        android:visibility="visible"


        />


</RelativeLayout>

<RelativeLayout
    android:id="@+id/headLayout"
    android:layout_below="@id/workCompleteLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="27dp">
    <TextView
        android:id="@+id/orderNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:textColor="@color/white"
        android:text="354"
        />
    <TextView
        android:id="@+id/orderDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/orderNo"
        android:textSize="17sp"
        android:textColor="@color/lessVisibileTextColor"
        android:alpha="0.5"

        />
    <TextView
        android:id="@+id/deliveryDateView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/orderDate"
        android:textSize="17sp"
        android:textColor="@color/lessVisibileTextColor"
        android:alpha="0.5"

        />
    <TextView
        android:id="@+id/customerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
       android:layout_above="@id/orderDate"
        android:textSize="32sp"
        android:textColor="@color/white"
        android:text="AYSHA RAHMAN"
        android:gravity="end"

        />
    <LinearLayout
        android:id="@+id/handWorkCardLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/deliveryDateView"
        android:orientation="horizontal"
        >
        <TextView
            android:textColor="@color/white"
            android:id="@+id/handWorkOnCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:layout_gravity="center_vertical"
            android:text="@string/handWork" />

        <ImageView

            android:id="@+id/handWorkOnImageView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:background="@color/primaryColor"
            android:padding="3dp"
            android:src="@drawable/tickmark"
            android:visibility="gone"


            />

        <ImageView
            android:id="@+id/handWorkOffImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_cancel_black_24dp"
            android:visibility="gone" />



    </LinearLayout>
</RelativeLayout>

    <TextView
        android:id="@+id/itemsCountView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:layout_below="@id/headLayout"
        android:textSize="74sp"
        android:textColor="@color/white"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="27dp"
        android:visibility="gone"
        />
    <ListView
        android:id="@+id/itemsListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/headLayout"
        android:layout_above="@id/bottomLayout"


        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/codeTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:hint="enter code"


        >

        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/codeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:background="@color/white"
            android:inputType="numberPassword"
            android:textSize="12sp"

            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/editButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottomLayout"
        android:layout_alignParentEnd="true"
        android:text="@string/edit_label"
        android:textColor="@color/black"
        app:backgroundTint="@color/white"
        app:cornerRadius="18dp"
        android:foregroundGravity="left"
        android:visibility="gone"
        />
    <LinearLayout
        android:id="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_margin="27dp"
        android:gravity="end"
        >
        <TextView
            android:id="@+id/designerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:visibility="visible"
            app:autoSizeTextType="uniform"
            android:layout_gravity="center_vertical"
            />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/workCompleteButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="2"
            android:text="@string/workCompleteText"
            android:textColor="@color/white"
            android:visibility="gone"
            app:backgroundTint="@color/finishColor"
            app:cornerRadius="18dp" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backButtonText"
            android:textColor="@color/white"
            app:backgroundTint="@color/backButtonColor"
            app:cornerRadius="18dp"
            android:foregroundGravity="left"
            />


    </LinearLayout>

</RelativeLayout>